updated shows callout message, changed link to venue website and added "text-wrap: nowrap" to css, to prevent small screen styling making text unreadable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,7 @@ code adapted from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+    text-wrap: nowrap;
     color: inherit;
 
   }
